<resources>
    <string name="app_name">ShopWay</string>
    <string name="registro_usuario_titulo">Informacion basica</string>
    <string name="registro_usuario_txtCedula">Cedula</string>

    <!--LABELS: Board -->
    <string name="lbl_busqueda">Buscar</string>

    <!--LABELS: Contain -->
    <string name="lbl_category">Categoria</string>
    <string name="lbl_product">Producto:</string>
    <string name="lbl_description">Descripcion:</string>
    <string name="lbl_valor">Valor:</string>

    <!--LABELS: Product -->
    <string name="lbl_vendedor">Vendedor:</string>
    <string name="lbl_estado">Estado:</string>
    <string name="lbl_adicionar">Adicionar</string>

    <!--LABELS: Compra -->
    <string name="lbl_titulo">Carrito de Compras</string>
    <string name="lbl_precioTotal">Precio total:</string>
    <string name="lbl_comprar">Comprar</string>

    <!-- MESSAGES: -->
    <string name="msg_add_carrito">Se guardo el producto en el carrito.</string>
    <string name="msg_car_empty">No existen productos en el carrito.</string>
    <string name="msg_delete_compra">Se elimino el producto satisfactoriamente.</string>
    <string name="msg_compra_exitosa">Se realizo la compra exitosamente.</string>

</resources>
