<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow"
            android:background="@color/colorWhite"
            android:onClick="goBack"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Title"
            android:textColor="@color/colorOrange"
            android:gravity="center"
            android:text="@string/lbl_titulo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_margin="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:text="@string/lbl_precioTotal"/>
        <TextView
            android:id="@+id/txtPrecioTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:gravity="center_horizontal"
            android:text=""/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentCompras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:layout_weight="11">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:text="@string/lbl_comprar"
        android:layout_gravity="bottom"
        android:onClick="buyCar"/>

</LinearLayout>