<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="horizontal"
    android:layout_weight="0.1">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_arrow"
        android:background="@color/colorWhite"
        android:onClick="goBack"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/bn_shopway"
        android:layout_weight="1"
        />
</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_anchorGravity="center_horizontal"
            app:cardUseCompatPadding="false"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_android_black_48dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:textColor="@color/colorOrange"
                    android:gravity="center_horizontal"
                    android:text="Producto"/>

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle"
                    android:text="Descripcion"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:text="@string/lbl_vendedor"/>
                    <TextView
                        android:id="@+id/txtUserCrea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:layout_marginLeft="5dp"
                        android:text="Admin"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:text="@string/lbl_estado"/>
                    <TextView
                        android:id="@+id/txtEstado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextStyle"
                        android:layout_marginLeft="5dp"
                        android:text="Disponible"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:gravity="center_horizontal"
                    android:text="$600,000 CP"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:layout_weight="0.2"
        android:text="@string/lbl_adicionar"
        android:layout_gravity="bottom"
        android:onClick="addToCar"/>
</LinearLayout>